2014-01-04  Bastian Maerkisch  <bmaerkisch@web.de>

	* src/win/wgraph.c (drawgraph):  Move GDI image drawing code from
	drawgraph() to a new routine draw_image().

	* src/command.c src/fit.c|h src/plot.c|h src/term.c src/win/wgraph.c 
	src/win/winmain.c src/win/wtext.c term/win.trm:  Handle Ctrl-C
	asynchronously on Windows (GUI and console mode). This is done by
	setting ctrlc_flag and testing it in check_for_mouse_event(). Thus,
	scripts etc. can now finally be interrupted by pressing Ctrl-C in
	console mode gnuplot or Ctrl-Break in wgnuplot.

	* src/win/winmain.c (ConsoleGetch):  Remap Shift-Tab key-code in
	console mode, too.

2014-01-03  Christoph Bersch <usenet@bersch.net>

	* src/gadgets.c (clip_polygon):  Handle the case of a NULL clipping box,
	possible for terminal types that do external clipping (e.g. epslatex).
	Bug #1316

	* src/boundary.c (do_key_sample):  Apply requested border around filled
	circle or ellipse used as a key sample.
	Bug #1315

2014-01-03  Ethan A Merritt  <merritt@u.washington.edu>

	* src/datafile.c (df_generate_pseudodata):  Allow use of '+' pseudofile
	to sample the parametric variable T in 2D parametric mode.

2014-01-02  Jérôme Lodewyck  <lodewyck@users.sourceforge.net>

	* src/qtterminal/QtGnuplotWidget.* src/qtterminal/QtGnuplotWindow.cpp:
	The Qt guidelines state that the "parent" variable should be the last
	argument of the contructor of a class derived from QWidget. Revert the
	QtGnuplotWidget constructor declaration to respect this rule. Add a second
	contructor with a single argument to enable loading from a ui file.

2014-01-01  Bastian Maerkisch  <bmaerkisch@web.de>

	* src/readline.c (readline, ansi_getc) src/win/wtext.c (WndTextProc):
	Builtin-readline: Shift-Tab cycles through the list of completions
	in reverse direction.

	* src/graphics.c (get_arrow, do_ellipse) src/graph3d.c (get_arrow3d)
	src/term.c (do_arc):  The aspect ratio of the internal coordinates
	of the windows terminal is always one. 
	Bug #1253
